tests/NormalTests/paczka1/fuzzy1/68787461.err
Error in line 1: s6StjT A274 40,6
Error in line 12: A231 A274 42,2
Error in line 18: EYxTJw8ZfAD A274 88,6
Error in line 20: iwnG4x S23 82,9
Error in line 25: iwnG4x A274 -1,3
Error in line 19: EYxTJw8ZfAD A247 34,9
Error in line 27: EYxTJw8ZfAD A274 4,8
Error in line 14: s6StjT A231 289,3
Error in line 39: 8iZQD8 A247 110,08
Error in line 29: EYxTJw8ZfAD S23 89,0
